Update links for path based routing.

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <p>Thank you for your feedback!</p>
         <ul>
           <li><a href="https://wiki.earthdata.nasa.gov/display/EDPUB/Earthdata+Pub+Feedback+Solicitation">Feedback Solicitation</a></li>
-          <li><a href="https://dashboard.pub.sit.earthdata.nasa.gov">Dashboard</a></li>
-          <li><a href="https://forms.pub.sit.earthdata.nasa.gov/interest/">Data Publication Request</a></li>
-          <li><a href="https://forms.pub.sit.earthdata.nasa.gov/questionnaire/">Data Product Information</a></li>
+          <li><a href="/dashboard">Dashboard</a></li>
+          <li><a href="/forms/interest/">Data Publication Request</a></li>
+          <li><a href="/forms/questionnaire/">Data Product Information</a></li>
         </ul>
       </section>
       <section class="sidebar">
