Added cypress testing; added axe accessiblity testing; fixed issues found from accessibility testing

--- a/src/assets/styles/index.html
+++ b/src/assets/styles/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </nav>
-    <div class="hero-callout" style="background-color: #2276ac;">
+    <div class="hero-callout" style="background-color: #2275AA;">
         <div class="container-lg">
             <div class="row pt-5">
                 <h1 class="text-center text-light display-5">Earthdata User Interface Library 2.0 Bootstrap 5 Theme</h1>
