--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,6 @@
     <!-- Add Kayako feedback module -->
     <script type="text/javascript" src="https://fbm.earthdata.nasa.gov/for/EDPub/feedback.js"></script>
     <script>feedback.init();</script>
-    <script src="https://cdn.earthdata.nasa.gov/tophat2/tophat2.js" id="earthdata-tophat-script" data-show-fbm="true" data-width="1140"></script>
+    <script src="https://cdn.earthdata.nasa.gov/tophat2/tophat2.js" id="earthdata-tophat-script" data-show-fbm="true" data-show-status="true" data-width="1140"></script>
   </body>
 </html>
